--- a/makefiles/Makefile.unix
+++ b/makefiles/Makefile.unix
@@ -107,6 +107,8 @@ ifdef UNIX_CLP_DIR
   endif
 endif
 
+ALPINEFLAG = 
+
 ifeq ($(PLATFORM),LINUX)
   CCC = g++ -fPIC -std=c++0x -fwrapv
   DYNAMIC_LD = g++ -shared
@@ -239,7 +241,7 @@ ifeq ($(PLATFORM),MACOSX)
   FLEX = dependencies/install/bin/flex
 endif  # MAC OS X
 
-CFLAGS = $(DEBUG) -I$(INC_DIR) -I$(EX_DIR) -I$(GEN_DIR) $(GFLAGS_INC) $(ARCH) \
+CFLAGS = $(DEBUG) -I$(INC_DIR) -I$(EX_DIR) -I$(GEN_DIR) $(GFLAGS_INC) $(ARCH) $(ALPINEFLAG) \
 	-Wno-deprecated $(PROTOBUF_INC) $(CBC_INC) $(CLP_INC) $(GLPK_INC) \
         $(SCIP_INC) $(SLM_INC) $(GUROBI_INC) $(CPLEX_INC) -DUSE_GLOP -DUSE_BOP $(SPARSEHASH_INC)
 
